fix: modify the gradle build file